Correção da documentação técnica e parâmetros

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <h1>Calculator Function!</h1>
 
             < !-- Entrada de dados -->
-                <label for="valor">Digite o valor aqui:</label>
+                <label for="valorEtrada">Digite o valor aqui:</label>
 
                 < !-- Armazenamento de dados -->
-                    <input type="number" id="valor" placeholder="valor numérico">
+                    <input type="number" id="valorEtrada" placeholder="valor numérico">
 
                     < !-- Chamando a função do arquivo script -->
                         <button onclick="calculator()">Resultado</button>
 
-                        < !-- Parametrizando os valores da função -->
+                        < !-- Parametrizando os valores de retorno da função -->
                             <p id="adiciona"></p>
                             <p id="mostrarSoma"></p>
         </div>
